# 2021-11-03 v0.4.1 [AG]
- Added autodiff option in estimation function which calls the tsvetsad package.
Currently optim (L-BFGS-B) and nlminb solvers supported for autodiff, and option
for use_hessian also included (for nlminb only).

# 2021-05-17 v0.4.0 [AG]
- Prediction table now includes the error (innovations) used as a tsmodel.predict 
class with original series being the estimated model residuals (with raw = TRUE 
so that it is on the same scale as the prediction innovations).

# 2021-04-08 v0.3.9 [AG]
- Added nloptr solver which is faster (particularly useful for larger problems), with customization
of the algorithm.
- ToDo: use BFGS C++ version so that overhead is reduced.

# 2020-10-29 v0.3.8 [AG]
- Added xreg group wise pooling option to the xreg_include. Also fixed an issue regarding the
indexing of xreg_include (added byrow = T to the Matrix construction).

# 2020-10-13 v0.3.7 [AG]
- Added gosolnp solver which provides better starting values for difficult problems.
- Added Changelog to package