@@ -10,6 +10,7 @@ Generates an expanding window walk forward backtest.
 \usage{
 \method{tsbacktest}{tsvets.spec}(object, start = floor(NROW(object$target$y_orig)/2), 
 end = NROW(object$target$y_orig), h = 1, alpha = NULL, 
+aggregate = FALSE, weights = NULL, 
 cores = 1, save_output = FALSE, save_dir = "~/tmp/", 
 solver = "nlminb", trace = FALSE, ...)
 }
@@ -33,6 +34,13 @@ sample periods.
 \item{alpha}{
 An optional numeric vector of coverage rates for which to calculate
 the quantiles.
+}
+\item{aggregate}{
+Whether to create an aggregate series from the forecasts (see 
+\code{\link{tsaggregate}} for details)
+}
+\item{weights}{
+A numeric weights vector for the aggregation.
 }
 \item{cores}{
 The number of cores to use for parallel estimation. The package
